# BG-Tools

./: .gitignore  README.md  pyproject.toml  release.sh
bg2celldl/: pyproject.toml
bg2cellml/: __init__.py  __main__.py  validate_cellml.py  version.py
bg2cellml/bondgraph/: __init__.py  bondgraph.py  framework.py  framework_support.py  model.py  model_support.py  namespaces.py  queries.py  utils.py
bg2cellml/cellml/: __init__.py
bg2cellml/mathml/: __init__.py
bg2cellml/rdf/: __init__.py  browser.py  namespace.py  oxigraph.py  store.py
bg2cellml/units/: __init__.py
bg2cellml/utils/: __init__.py
cli/bg2cellml/: __main__.py  utils.py
cli/bgtool/: __main__.py  celldl.py  cellml.py  rdfload.py  utils.py
notebooks/: bg2cellml.ipynb
oximock/: __init__.py
tests/: helper.py  test_bondgraph_simulations.py
tests/models/: bvc.ttl  example_RC_reduced.ttl
tests/output/: bvc.cellml  bvc.txt  example_RC_reduced.cellml  example_RC_reduced.txt
