[project]
name = "bg2cellml"
description = "Bondgraph RDF tools"
version = "0.7.1"
authors = [
    { name = "David Brooks", email = "d.brooks@auckland.ac.nz"}
]
requires-python = "==3.12.*"
dependencies = [
    "libopencor",
    "lxml>=5.4.0",
    "networkx>=3.3",
    "numpy>=2.3.0",
    "oxrdflib>=0.5.0",
    "pint>=0.24.4",
    "rdflib>=7.1.4",
    "rich>=14.0.0",
    "scipy>=1.15.3",
    "structlog>=25.4.0",
    "sympy>=1.14.0",
    "ucumvert>=0.2.2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.4",
    "matplotlib>=3.10.3",
    "pytest>=8.4.0",
    "rdflib-endpoint[cli]>=0.5.3",
]

[tool.uv.sources]
libopencor = { git = "https://github.com/opencor/libopencor.git" }

[project.scripts]
bg2cellml = 'bg2cellml.__main__:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["bg2cellml"]

[tool.hatch.build.targets.sdist.force-include]
"BG-RDF/examples" = "/BG-RDF/examples"
"BG-RDF/templates" = "/BG-RDF/templates"
"BG-RDF/schema/ontology.ttl" = "/BG-RDF/schema/ontology.ttl"

[tool.hatch.build.targets.wheel]
packages = ["bg2cellml"]

[tool.hatch.build.targets.wheel.force-include]
"BG-RDF/examples" = "/BG-RDF/examples"
"BG-RDF/templates" = "/BG-RDF/templates"
"BG-RDF/schema/ontology.ttl" = "/BG-RDF/schema/ontology.ttl"
