[project]
name = "bg2cellml"
description = "Bondgraph RDF tools"
version = "0.8.7"
authors = [
    { name = "David Brooks", email = "d.brooks@auckland.ac.nz"}
]
requires-python = "==3.13.*"
dependencies = [
    "lxml>=5.4.0",
    "networkx>=3.5",
    "pint>=0.24.4",
    "sympy>=1.14.0",
    "pyoxigraph>=0.5.2",
    "ucumvert>=0.2.2",
]

[dependency-groups]
dev = [
    "pip>=25.3",
    "pyodide-build>=0.30.9",
    "pytest>=8.4.0",
]
notebook = [
    "ipycytoscape>=1.3.3",
    "ipympl>=0.9.8",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
]
standalone = [
    "libopencor",
    "rich>=14.2.0",
    "structlog>=25.5.0",
]

[tool.uv]
package = true

[tool.uv.sources]
libopencor = { git = "https://github.com/opencor/libopencor.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["bg2cellml"]

[tool.hatch.build.targets.sdist.force-include]
"BG-RDF/examples" = "/bg2cellml/BG-RDF/examples"
"BG-RDF/templates" = "/bg2cellml/BG-RDF/templates"
"BG-RDF/schema/ontology.ttl" = "/bg2cellml/BG-RDF/schema/ontology.ttl"

[tool.hatch.build.targets.wheel]
packages = ["bg2cellml"]

[tool.hatch.build.targets.wheel.force-include]
"BG-RDF/examples" = "/bg2cellml/BG-RDF/examples"
"BG-RDF/templates" = "/bg2cellml/BG-RDF/templates"
"BG-RDF/schema/ontology.ttl" = "/bg2cellml/BG-RDF/schema/ontology.ttl"
